# jackalope-storage

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  commons.cmake  conanfile.txt
src/example/: example.cpp  example.hpp
src/free_space_index/: fsi.cpp  fsi.hpp  fsi_container.cpp  fsi_container.hpp
src/memory/: file_header.cpp  file_header.hpp  memory.cpp  memory.hpp  memory_map.cpp  memory_map.hpp  memory_map_factory.cpp  memory_map_factory.hpp  page.cpp  page.hpp  page_pointer.cpp  page_pointer.hpp  row.cpp  row.hpp
src/model/: instance.cpp  instance.hpp  pid.cpp  pid.hpp  semnet_models.cpp  semnet_models.hpp  sense.cpp  sense.hpp  sin.cpp  sin.hpp  wordform.cpp  wordform.hpp
src/storage_api/: storage_api.cpp  storage_api.hpp
tests/: CMakeLists.txt  memory_map_tests.cpp  page_tests.cpp  test-example.cpp
